--- a/servicio-usuarios-dev.properties
+++ b/servicio-usuarios-dev.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
-spring.datasource.username=postgres
-spring.datasource.password=sasa
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud?serverTimezone=Europe/Madrid
+spring.datasource.username=root
+spring.datasource.password=Delta2009
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.hibernate.SQL=debug
